<resources>
    <string name="app_name">自然天津</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title_discover">发现</string>
    <string name="tab_title_personal">我的</string>
    <string name="tab_title_search">速查</string>
    <string name="tab_title_upload">增加</string>
    <string name="label_bird_name">鸟名</string>
    <string name="label_lock_location_time">锁定位置及时间</string>
    <string name="label_unlock_location_time">未锁定位置及时间</string>
    <string name="filter">筛选</string>
    <string name="edit_record">编辑记录</string>
    <string name="save">保存</string>
    <string name="discover">发现</string>
    <string name="label_location">地点</string>
    <string name="label_time">时间</string>
    <string name="label_specie">物种</string>
    <string name="label_quantity">数量</string>
    <string name="label_description">描述</string>
    <string name="label_add">添加</string>
    <string name="label_select_specie">选择物种</string>
    <string name="label_unit">只</string>
    <string name="label_click_login">点击登陆</string>
    <string name="label_detail">详情</string>
    <string name="label_english_name">英文名</string>
    <string name="label_latin_name">拉丁名</string>
    <string name="label_body_length">体长</string>
    <string name="label_outdoor_feature">野外识别特征</string>
    <string name="label_habits">习性</string>
    <string name="label_stridulation">鸣声</string>
    <string name="label_distribution">分布</string>
    <string name="label_stay_status">居留情况</string>
    <string name="label_scientific_name">学名</string>
    <string name="label_nickname">别称</string>
    <string name="label_classification">分类地位</string>
    <string name="label_feature">识别特征</string>
    <string name="label_fruit_type">果实类型</string>
    <string name="label_major_value">主要价值</string>
    <string name="label_all_records">总记录</string>
    <string name="label_all_species">总种类</string>
    <string name="label_this_year">今年</string>
    <string name="label_one_time">次</string>
    <string name="label_one_specie">种</string>
    <string name="label_record_preview">记录预览</string>
    <string name="label_ranking">排行榜</string>
    <string name="label_class">分类地位</string>
    <string name="label_protection_level">保护等级</string>
    <string name="label_value">应用价值</string>
    <string name="label_others">其他</string>
    <string name="label_summary">简介</string>
    <string name="label_upload">上传</string>
    <string name="label_record">记录</string>
    <string name="label_loading">正在加载</string>
    <string name="label_apply">确定</string>
    <string name="label_cancel">取消</string>
    <string name="label_record_list">记录列表</string>
    <string name="label_user">用户</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_settings">设置</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_sign_in">登陆</string>
    <string name="label_choose_headshot">选择头像</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="label_sign_up">注册</string>
    <string name="label_repeat_password">重复密码</string>
    <string name="label_phone_num">手机号</string>
</resources>
