<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout.Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_line"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="com.wildlifeoftianjin.ui.fragment.homepage.PersonalFragment">

    <RelativeLayout
        style="@style/Layout.TopBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height">

        <ImageView
            android:id="@+id/imageSettings"
            style="@style/Layout.TopBar.Icon"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_settings" />

        <TextView
            style="@style/Layout.TopBar.Title"
            android:text="个人"
            android:textAppearance="@style/Text.TopBar" />

        <ImageView
            android:id="@+id/imageDraftBox"
            style="@style/Layout.TopBar.Icon"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_draftbox" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/userLayout"
        style="@style/Layout.Row"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageUser"
            style="@style/Icon.Headshot.Large"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_account" />

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_click_login"
            android:textAppearance="@style/Text.Normal.Content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAllRecord"
        style="@style/Layout.Row"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_all_records"
            android:textAppearance="@style/Text.Normal.Label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAllSpecies"
        style="@style/Layout.Row"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_all_species"
            android:textAppearance="@style/Text.Normal.Label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAllActions"
        style="@style/Layout.Row"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_this_year"
            android:textAppearance="@style/Text.Normal.Label" />

        <TextView
            android:id="@+id/textRecordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/Text.Normal.Content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_one_time"
            android:textAppearance="@style/Text.Normal.Label" />

        <TextView
            android:id="@+id/textSpecieCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/Text.Normal.Content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_one_specie"
            android:textAppearance="@style/Text.Normal.Label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRecordPreview"
        style="@style/Layout.Row"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_record_preview"
            android:textAppearance="@style/Text.Normal.Label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRanking"
        style="@style/Layout.Row"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ranking"
            android:textAppearance="@style/Text.Normal.Label" />
    </LinearLayout>

</LinearLayout>
