<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wildlifeoftianjin.ui.fragment.UploadRecordFragment">

    <RelativeLayout style="@style/Layout.TopBar">

        <TextView
            android:id="@+id/textVIew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_record"
            android:textAppearance="@style/Text.TopBar" />

        <Button
            android:id="@+id/buttonSave"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:text="@string/save"
            android:textColor="@color/button_action"
            android:textSize="@dimen/text_size_very_large" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/label_description"
                android:textAppearance="@style/Text.Normal.Label" />

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_quantity"
                    android:textAppearance="@style/Text.Normal.Label" />

                <TextView
                    android:id="@+id/textQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="TextView"
                    android:textAppearance="@style/Text.Normal.Content" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit"
                    android:textAppearance="@style/Text.Normal.Content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/label_time"
                    android:textAppearance="@style/Text.Normal.Label" />

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="TextView"
                    android:textAppearance="@style/Text.Normal.Content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_specie"
                    android:textAppearance="@style/Text.Normal.Label" />

                <TextView
                    android:id="@+id/textSpecie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/label_select_specie"
                    android:textAppearance="@style/Text.Normal.Content" />

            </LinearLayout>

            <EditText
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textAppearance="@style/Text.Normal.Content" />

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textAppearance="@style/Text.Normal.Label" />

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="TextView"
                    android:textAppearance="@style/Text.Normal.Content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_lock_location_time"
                    android:textAppearance="@style/Text.Normal.Label" />

                <ToggleButton
                    android:id="@+id/toggleLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="@string/label_unlock_location_time"
                    android:textOn="@string/label_lock_location_time" />
            </LinearLayout>

            <view
                android:id="@+id/imageList"
                class="android.support.v7.widget.RecyclerView"
                id="@+id/view"
                layout_width="match_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
