<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_quantity"
                    android:textAppearance="@style/Text.Normal.Label" />

                <EditText
                    android:id="@+id/editCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:text="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="1"
                    android:text="@string/label_unit"
                    android:textAppearance="@style/Text.Normal.Content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/label_time"
                    android:textAppearance="@style/Text.Normal.Label" />

                <EditText
                    android:id="@+id/editTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="datetime"
                    android:text=" 2017/5/1 8:00" />
            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_specie"
                    android:textAppearance="@style/Text.Normal.Label" />

                <EditText
                    android:id="@+id/editSpecie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="text"
                    android:text="cat" />

            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_description"
                    android:textAppearance="@style/Text.Normal.Label" />

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/Text.Normal.Content" />

            </LinearLayout>

            <LinearLayout
                style="@style/Layout.Row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textAppearance="@style/Text.Normal.Label" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPostalAddress" />

            </LinearLayout>

            <ToggleButton
                android:id="@+id/toggleLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOff="@string/label_unlock_location_time"
                android:textOn="@string/label_lock_location_time" />

            <view
                android:id="@+id/listImage"
                class="android.support.v7.widget.RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_upload" />

</LinearLayout>
