<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout.Root"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.wildlifeoftianjin.ui.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/Layout.TopBar"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageBack"
            style="@style/Layout.TopBar.Icon"
            android:layout_alignParentLeft="true"
            android:onClick="onBack"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/Layout.TopBar.Title"
            android:text="@string/label_sign_in"
            android:textAppearance="@style/Text.TopBar" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/headshotLayout"
        style="@style/Layout.Row"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onPickHeadShot"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageHeadShot"
            style="@style/Icon.Headshot.Large"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_choose_headshot"
            android:textAppearance="@style/Text.Normal.Content" />
    </LinearLayout>

    <LinearLayout
        style="@style/Layout.Row"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textAppearance="@style/Text.Normal.Label" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="@style/Text.Normal.Label" />

    </LinearLayout>

    <LinearLayout
        style="@style/Layout.Row"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textAppearance="@style/Text.Normal.Label" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeatLayout"
        style="@style/Layout.Row"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_repeat_password"
            android:textAppearance="@style/Text.Normal.Label" />

        <EditText
            android:id="@+id/editRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignIn"
            android:text="@string/label_sign_in" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignUp"
            android:text="@string/label_sign_up" />
    </LinearLayout>

</LinearLayout>
